tests/sqlcmd/baselines/errors/load_classes1.errbaseline
SQL error while compiling query: SQL Syntax error in "LOAD" unexpected token: LOAD
